[package]
name = "regex-fuzz"
version = "0.0.0"
authors = ["David Korczynski <david@adalogics.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.2.3", features = ["derive"] }
libfuzzer-sys = "0.4.1"

[dependencies.regex]
path = ".."

[dependencies.regex-syntax]
path = "../regex-syntax"
features = ["arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_regex_match"
path = "fuzz_targets/fuzz_regex_match.rs"

[[bin]]
name = "fuzz_regex"
path = "fuzz_targets/fuzz_regex.rs"
test = false
doc = false

[profile.release]
opt-level = 3
debug = true

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
debug = true
