[package]
name = "rure"
version = "0.1.1"  #:version
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/regex"
documentation = "https://github.com/rust-lang-nursery/regex/tree/master/regex-capi"
homepage = "https://github.com/rust-lang/regex"
description = """
A C API for Rust's regular expression library.
"""

[lib]
name = "rure"
crate-type = ["staticlib", "dylib"]

[dependencies]
libc = "0.2"
regex = { version = "0.1.69", path = ".." }
