[package]
name = "rure"
version = "0.2.0"  #:version
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/regex"
documentation = "https://github.com/rust-lang/regex/tree/master/regex-capi"
homepage = "https://github.com/rust-lang/regex"
description = """
A C API for Rust's regular expression library.
"""

[lib]
name = "rure"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
regex = { version = "0.2.0", path = ".." }
