[package]
name = "rure"
version = "0.2.2"  #:version
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/regex"
documentation = "https://github.com/rust-lang/regex/tree/master/regex-capi"
homepage = "https://github.com/rust-lang/regex"
description = """
A C API for Rust's regular expression library.
"""
workspace = ".."
edition = "2021"
rust-version = "1.65"

[lib]
name = "rure"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
libc = "0.2"
regex = { version = "1", path = ".." }
