[package]
publish = false
name = "regex-debug"
version = "0.1.0"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/regex"
documentation = "https://docs.rs/regex"
homepage = "https://github.com/rust-lang/regex"
description = "A tool useful for debugging regular expressions."
workspace = ".."

[dependencies]
docopt = "0.8"
regex = { version = "1.0", path = ".." }
regex-syntax = { version = "0.6.0", path = "../regex-syntax" }
serde = "1"
serde_derive = "1"
utf8-ranges = "1"
