[package]
publish = false
name = "regex-debug"
version = "0.1.0"
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/regex"
documentation = "https://docs.rs/regex"
homepage = "https://github.com/rust-lang/regex"
description = "A tool useful for debugging regular expressions."
workspace = ".."
edition = "2018"

[dependencies]
docopt = "1"
regex-old = { version = "1.1", path = ".." }
regex-syntax-old = { version = "0.6", path = "../regex-syntax" }
serde = { version = "1", features = ["derive"] }
