[package]
name = "regex-test"
version = "0.1.0"  #:version
authors = ["The Rust Project Developers", "Andrew Gallant <jamslam@gmail.com>"]
description = """
Infrastructure for testing regexes.

You probably don't want to use this crate unless you're working on a regex
implementation.
"""
documentation = "https://docs.rs/regex-test"
repository = "https://github.com/rust-lang/regex/tree/master/regex-test"
readme = "README.md"
keywords = ["regex", "regexp", "dfa", "automata", "test"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "regex_test"
bench = false
path = "lib.rs"

[dependencies]
anyhow = "1.0.27"
bstr = { version = "1.3.0", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0.105", features = ["derive"] }
toml = { version = "0.7.3", default-features = false, features = ["parse"] }
