[package]
name = "regex_macros"
version = "0.1.31"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/regex"
homepage = "https://github.com/rust-lang/regex"
description = """
An implementation of statically compiled regular expressions for Rust.

Unless you specifically need compile time regular expressions or a matching
engine that is guaranteed not to allocate, you should temporarily prefer using
the plain regex crate (since it is almost always faster).
"""

[lib]
name = "regex_macros"
plugin = true

[dependencies.regex]
path = ".."
version = "0.1.53"
features = ["pattern"]

[dependencies.regex-syntax]
path = "../regex-syntax"
version = "0.2.4"

[dev-dependencies]
lazy_static = "0.1"
rand = "0.3"
regex-syntax = { path = "../regex-syntax", version = "0.2" }

[[test]]
path = "../tests/test_native.rs"
name = "native"

[[bench]]
name = "native"
path = "../benches/bench_native.rs"
test = false
bench = true
